--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-6 h-full flex flex-center" >
                 <div class="flex flex-col">
                     <h2>Olá, Bem-vindo</h2>
-                    <h1>Sou <strong style="color: teal;">Manuel Madie Charruma</strong></h1>
+                    <h1>Sou <strong style="color: teal;">Manuel Benjamim Madie</strong></h1>
                     <span style="color: gray;">Desenvolvedor de sistemas especializado em <br> desenvolvimento de sistemas web.</span>
                     <div class="flex flex-row">
                         <span class="rounded tag text-sm">
